--- a/config/config.yaml
+++ b/config/config.yaml
@@ -25,6 +25,7 @@ MOVING_AVERAGE_FILTER:
 TOPIC:
   PUB_NAME: /xycar_motor
   SUB_NAME: /usb_cam/image_raw/
+  LIDAR_NAME: /scan
   QUEUE_SIZE: 1
 
 DEBUG: true
