--- a/config/config.yaml
+++ b/config/config.yaml
@@ -29,3 +29,9 @@ TOPIC:
   QUEUE_SIZE: 1
 
 DEBUG: true
+
+CAMERA:
+  CAMERA_MATRIX: [[360.77831, 0.0, 332.39996],
+                  [0.0, 362.68611, 211.57494],
+                  [0.0, 0.0, 1.0]]
+  DIST_COEFF: [-0.318694, 0.088588, -0.000184, -0.003607, 0.0]
