--- a/config/config.yaml
+++ b/config/config.yaml
@@ -36,6 +36,7 @@ CAMERA:
   DIST_COEFF: [-0.3274493403957699, 0.0826328081569166, 0.001002089215118404, 0.00263257842447227, 0.0]
 
 YOLO:
-  CONFIG: "~/xycar_ws/src/sensor_fusion_system/config/yolov3-tiny_tstl_416.cfg"
-  MODEL: "~/xycar_ws/src/sensor_fusion_system/config/model_epoch4400_pretrained_04_001.trt"
-  LABEL: "~/xycar_ws/src/sensor_fusion_system/config/labels.names"
+  CONFIG: "/home/nvidia/xycar_ws/src/sensor_fusion_system/config/yolov3-tiny_tstl_416.cfg"
+  # MODEL: "/home/nvidia/xycar_ws/src/sensor_fusion_system/config/model_epoch4400.weights"
+  MODEL: "/home/nvidia/xycar_ws/src/sensor_fusion_system/config/model_epoch4400.onnx"
+  LABEL: "/home/nvidia/xycar_ws/src/sensor_fusion_system/config/labels.names"
